LDEV-4694 Remove obsolete embedded MySQL configuration

--- a/lams_common/build.xml
+++ b/lams_common/build.xml
@@ -27,7 +27,7 @@
 		
 		<echo>Executing SQL scripts</echo>
 		<sql driver="com.mysql.cj.jdbc.Driver"
-		     url="${db.url.init.build}"
+		     url="${db.url.build}"
 			 userid="${db.username}"
 			 password="${db.password}"
 			 encoding="utf8">
