Clean www dirs otherwise builds from other branches causes problems.
www does not have the build directories cleaned when the Java code is
built so they need to be cleaned explicitly otherwise files that are
left in the build area from another branch are deployed.

--- a/lams_build/build.xml
+++ b/lams_build/build.xml
@@ -164,6 +164,7 @@
 		<ant antfile="../lams_learning/build.xml"          target="_build-product" inheritAll="false" />
 		<ant antfile="../lams_monitoring/build.xml"        target="_build-product" inheritAll="false" />
 		<ant antfile="../lams_admin/build.xml"             target="_build-product" inheritAll="false" />
+		<ant antfile="../lams_www/build.xml"               target="_clean-dirs"     inheritAll="false" />
 		<ant antfile="../lams_www/build.xml"               target="_build-war"     inheritAll="false" />
 		<ant antfile="../lams_gradebook/build.xml"         target="_build-product" inheritAll="false" />
 	</target>
