LDEV-4720 Fix test harness so it can work with LAMS after it was moved to Spring MVC and Hibernate annotations

--- a/TestHarness4LAMS2/adminTest1.properties
+++ b/TestHarness4LAMS2/adminTest1.properties
@@ -2,8 +2,8 @@
 # 2 URLs to be used have to be defined
 # Don't change %orgId% as the part to be replaced with the real course Id
 #-----------------------------------------------------------------
-CreateCourseURL = /admin/organisation.do?method=edit&typeId=2&parentId=1&parentName=Root
-CreateUserURL = /admin/user.do?method=edit&orgId=%orgId%
+CreateCourseURL = /admin/organisation/edit.do?typeId=2&parentId=1&parentName=Root
+CreateUserURL = /admin/user/edit.do?orgId=%orgId%
 AddRolesURL = /admin/userrolessave.do
 
 #---------------------------------------------------------------
