--- a/TestHarness4LAMS2/authorTest1.properties
+++ b/TestHarness4LAMS2/authorTest1.properties
@@ -1,7 +1,7 @@
 #-----------------------------------------------------------------
 # This LearningDesignUploadURL value
 #-----------------------------------------------------------------
-LearningDesignUploadURL = /authoring/importToolContent.do?method=import
+LearningDesignUploadURL = /authoring/importToolContent/import.do
 
 #-----------------------------------------------------------------
 # This LearningDesignFile is uploaded to import a Learning Design
