--- a/TestHarness4LAMS2/learnerTest1.properties
+++ b/TestHarness4LAMS2/learnerTest1.properties
@@ -1,7 +1,7 @@
 #-------------------------------------------------------------------
 # A bunch of URLs to be used have to be defined
 #-------------------------------------------------------------------
-JoinLessonURL = /learning/learner.do?method=joinLesson&lessonID=%lsId%
+JoinLessonURL = /learning/learner/joinLesson.do?lessonID=%lsId%
 LessonEntryURL = /learning/DisplayActivity.do?lessonID=%lsId%
 
 #-------------------------------------------------------------------
