--- a/TestHarness4LAMS2/monitorTest1.properties
+++ b/TestHarness4LAMS2/monitorTest1.properties
@@ -6,10 +6,10 @@
 #-----------------------------------------------------------------
 # A few URLs have to be defined
 #-----------------------------------------------------------------
-InitLessonURL = /monitoring/monitoring.do?method=initializeLesson&learningDesignID=%ldId%&organisationID=%orgId%&userID=%uid%&lessonName=%name%
-CreateLessonClassURL = /monitoring/monitoring.do?method=createLessonClass&userID=%uid%
-StartLessonURL = /monitoring/monitoring.do?method=startLesson&lessonID=%lsId%&userID=%uid%
-GetAllLearnersProgressURL = /monitoring/monitoring.do?method=getLessonProgress&lessonID=%lsId%
+InitLessonURL = /monitoring/monitoring/initializeLesson.do?learningDesignID=%ldId%&organisationID=%orgId%&userID=%uid%&lessonName=%name%
+CreateLessonClassURL = /monitoring/monitoring/createLessonClass.do?userID=%uid%
+StartLessonURL = /monitoring/monitoring/startLesson.do?lessonID=%lsId%&userID=%uid%
+GetAllLearnersProgressURL = /monitoring/monitoring/getLessonProgress.do?lessonID=%lsId%
 
 
 #-----------------------------------------------------------------
