--- a/TestHarness4LAMS2/.classpath
+++ b/TestHarness4LAMS2/.classpath
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="lib" path="lib/httpunit.jar" sourcepath="/3rdParty_sources/httpunit"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="lib/httpunit.jar" sourcepath="/3rdParty_sources/httpunit"/>
 	<classpathentry kind="lib" path="lib/jboss-websocket-api_1.1_spec-1.1.3.Final.jar"/>
 	<classpathentry kind="lib" path="lib/xnio-api-3.3.0.Final.jar"/>
 	<classpathentry kind="lib" path="lib/xnio-nio-3.3.0.Final.jar"/>
@@ -21,5 +25,6 @@
 	<classpathentry kind="lib" path="lib/xercesImpl.jar"/>
 	<classpathentry kind="lib" path="lib/jackson-core-2.9.5.jar" sourcepath="/3rdParty_sources/jackson"/>
 	<classpathentry kind="lib" path="lib/jackson-databind-2.9.5.jar" sourcepath="/3rdParty_sources/jackson"/>
+	<classpathentry kind="lib" path="lib/jackson-annotations-2.9.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
