LDEV-4731 Initial implementation of enrolments parser

--- a/lams_central/web/WEB-INF/web.xml
+++ b/lams_central/web/WEB-INF/web.xml
@@ -397,6 +397,13 @@
 		</servlet-class>
 	</servlet>
 	
+	<servlet>
+		<servlet-name>SPEnrolmentServlet</servlet-name>
+		<servlet-class>
+			org.lamsfoundation.lams.webservice.SPEnrolmentServlet
+		</servlet-class>
+	</servlet>
+	
 	
 	<servlet-mapping>
 		<servlet-name>LearningDesignRestServlet</servlet-name>
@@ -522,7 +529,10 @@
 		<servlet-name>OrganisationGroupServlet</servlet-name>
 		<url-pattern>/services/xml/CourseGroupManager</url-pattern>
 	</servlet-mapping>
-	
+	<servlet-mapping>
+		<servlet-name>SPEnrolmentServlet</servlet-name>
+		<url-pattern>/services/SPEnrolment</url-pattern>
+	</servlet-mapping>
 	
 	<mime-mapping>
 		<extension>csv</extension>
@@ -669,6 +679,7 @@
 			<url-pattern>/services/xml/NotificationManager</url-pattern>
 			<url-pattern>/services/UserRoleManager</url-pattern>
 			<url-pattern>/services/xml/CourseGroupManager</url-pattern>
+			<url-pattern>/services/SPEnrolment</url-pattern>
 			<url-pattern>/ForgotPasswordRequest</url-pattern>
 			<url-pattern>/forgotPasswordChange.jsp</url-pattern>
 			<url-pattern>/forgotPasswordProc.jsp</url-pattern>
