LDEV-4784 Update POI library to 4.0.1 version

--- a/lams_build/build.xml
+++ b/lams_build/build.xml
@@ -410,6 +410,13 @@
 		<copy tofile="${server.home}/modules/system/layers/base/org/apache/xmlbeans/main/module.xml"
 			  file="lib/apache-poi/xmlbeans.module.xml" overwrite="true" verbose="true" />
 		
+		<copy todir="${server.home}/modules/system/layers/base/org/apache/commons/compress/main" overwrite="true" verbose="true">
+			<fileset dir="lib/apache-poi">
+				<include name="commons-compress-*.jar" />
+			</fileset>
+		</copy>
+		<copy tofile="${server.home}/modules/system/layers/base/org/apache/commons/compress/main/module.xml"
+			  file="lib/apache-poi/compress.module.xml" overwrite="true" verbose="true" />	
 		
 		
 		<copy todir="${server.home}/modules/system/layers/base/org/imsglobal/main" overwrite="true" verbose="true">
