--- a/lams_central/web/WEB-INF/web.xml
+++ b/lams_central/web/WEB-INF/web.xml
@@ -612,6 +612,7 @@
 		<web-resource-collection>
 			<web-resource-name>Authoring content</web-resource-name>
 			<url-pattern>/authoring/*</url-pattern>
+			<url-pattern>/outcome/*</url-pattern>
 			<http-method>GET</http-method>
  			<http-method>POST</http-method>
 		</web-resource-collection>
